# calendar_honey

./: .gitignore  README.md  config.example.yaml  conftest.py  pyproject.toml  requirements.txt  run_tests.sh
calendar_honey/: __init__.py  __main__.py  config.py  document_loader.py  document_transformer.py  embedding_service.py  indexing_state.py  ingest.py  storage.py  vector_store.py
fixtures/: sample_event.json
tests/: __init__.py  test_document_loader.py  test_document_transformer.py  test_integration.py
